--- a/lightning/bored.html
+++ b/lightning/bored.html
@@ -29,12 +29,18 @@
 
 <section>
 <h1>BoredBot</h1>
+</section>
+
+<section>
+<h1>BoredBot</h1>
 
 <ul>
 <li class="fragment"><code>boredbot/*.py</code> -- application code</li>
 <li class="fragment">Our job -- deploy it to production</li>
 <li class="fragment">Our values -- security, reliability</li>
 </ul>
+
+<p><br/><br/>http://github.com/moshez/boredbot</p>
 </section>
 
 <section>
