--- a/bored-full.html
+++ b/bored-full.html
@@ -204,10 +204,11 @@ def main(dummyArgs):
 app = flask.Flask(__name__)
 app.config['headers'] = parse.getHeaders("sYIULJPxHZCryGbqxbNfs"
                                          "XF8PPU4Blf4Ow5b8SFc",
-                                         "CENSORED -- SECRET DATA")
-app.config['stateHeaders'] = parse.getHeaders("jcMhpH2gLjin9TK3oQH2"
-                                              "5Nn4kOG1XQHE8K0WmySL",
-                                             "CENSORED -- SECRET DATA")
+                                        "CENSORED -- SECRET DATA")
+app.config['stateHeaders'] = parse.getHeaders(
+                                 "jcMhpH2gLjin9TK3oQH2"
+                                 "5Nn4kOG1XQHE8K0WmySL",
+                                 "CENSORED -- SECRET DATA")
 app.register_blueprint(web.blueprint)
 </code></pre></section>
 
@@ -306,7 +307,8 @@ def main(args):
                args=cmdLine[1:] + ['loop'])
     ctllib.add(places, 'boredweb', cmd=cmdLine[0],
                args=cmdLine[1:] + ['gunicorn',
-                                   '--bind', '0.0.0.0:8000', '-w', '4',
+                                   '--bind', '0.0.0.0:8000',
+                                   '-w', '4',
                                    'boredbot_deploy.wsgi:app'])
     sys.argv = ['twistd', '--nodaemon', 'ncolony',
                 '--messages', places.messages,
@@ -379,26 +381,23 @@ class Secrets(object):
 <section>
 <h2>Encrypted secrets</h2>
 
-<pre></code>
-# boredbot_deploy/config.py
+<pre><code># boredbot_deploy/config.py
 # ... imports ...
 PARSE_APPLICATION_ID = "sYIULJPxHZCryGbqxbNfsXF8PPU4Blf4Ow5b8SFc"
 STATE_APPLICATION_ID = "jcMhpH2gLjin9TK3oQH25Nn4kOG1XQHE8K0WmySL"
-SECRETS = crypto.Secrets(
-    envVar='SECRET_KEY',
+SECRETS = crypto.Secrets(envVar='SECRET_KEY',
     publicKey="1Wy7uKOcaa5p/5BiMJ82M7v+1c3+SB0DesMTWIj5AxU=",
     signingKey="p14AmTX3SAR7wdN3+6HHWXdTiYhkMG9XzsztBoxnhr4=",
-    encSecrets=
-        dict(
+    encSecrets=dict(
             PARSE_REST_API_KEY="a9uodFprEyR4K/xKP7I4lCmafObPac"
                                "/67+pHGy2So3TzVTZJuLU2oZqt+kBr3"
-                               "pGFvyb/ZMWANaMPkFadXmkv/RlYWeQBO9"
-                               "gBo+/ziTNNjy0=",
-            STATE_REST_API_KEY="wSRKdcA5JbXjXV5/4BIIoiVxrwgbp0DHAiT"
-                               "1O1Qrqa9ACRuytA2yOmo6Je05p/5pRHiKi2V"
-                               "Q/BMXxCRBWrBTOqE+TqG/EWkaRj8vSxQYj4I=",
-        ),
-)
+                               "pGFvyb/ZMWANaMPkFadXmkv/RlYWeQB"
+                               "O9gBo+/ziTNNjy0=",
+            STATE_REST_API_KEY="wSRKdcA5JbXjXV5/4BIIoiVxrwgbp0DH"
+                               "AiT1O1Qrqa9ACRuytA2yOmo6Je05p/5p"
+                               "RHiKi2VQ/BMXxCRBWrBTOqE+TqG/EWka"
+                               "Rj8vSxQYj4I=",
+))
 </code></pre>
 </section>
 
@@ -477,7 +476,8 @@ def buildWheels(buildDir, requirements):
 <pre><code>
 # luggage/buildpex.py
 # ... imports ...
-def buildPEX(wheelhouse, output, requirements, module, localwheels):
+def buildPEX(wheelhouse, output, requirements,
+             module, localwheels):
     if os.path.exists(output):
         os.remove(output)
     subprocess.check_call(['pex', '--repo', wheelhouse,
