--- a/bored.html
+++ b/bored.html
@@ -29,18 +29,18 @@
 
 <section>
 <h1>BoredBot</h1>
+<p><br/><br/>http://github.com/moshez/boredbot</p>
 </section>
 
 <section>
 <h1>BoredBot</h1>
 
 <ul>
-<li class="fragment"><code>boredbot/*.py</code> -- application code</li>
-<li class="fragment">Our job -- deploy it to production</li>
-<li class="fragment">Our values -- security, reliability</li>
+<li class="fragment">Deploy code...</li>
+<li class="fragment">...securely...</li>
+<li class="fragment">...reliability.</li>
 </ul>
 
-<p><br/><br/>http://github.com/moshez/boredbot</p>
 </section>
 
 <section>
