--- a/bored.html
+++ b/bored.html
@@ -33,10 +33,10 @@
 </section>
 
 <section>
-<h1>BoredBot</h1>
+<h1>Job</h1>
 
 <ul>
-<li class="fragment">Deploy code...</li>
+<li class="fragment">Deploy existing code...</li>
 <li class="fragment">...securely...</li>
 <li class="fragment">...reliability.</li>
 </ul>
