--- a/bored.html
+++ b/bored.html
@@ -29,7 +29,8 @@
 
 <section>
 <h1>BoredBot</h1>
-<p><br/><br/>http://github.com/moshez/boredbot</p>
+<h2>http://github.com/moshez/boredbot</h2>
+<p>(Partially inspired by glyph <img src="glyph.png" height="30" width="30"/>)</p>
 </section>
 
 <section>
