--- a/bored.html
+++ b/bored.html
@@ -28,7 +28,7 @@
 <div class="slides">
 
 <section>
-<h1>BoredBot</h1>
+<h1>Better Deployment</h1>
 <h2>http://github.com/moshez/boredbot</h2>
 <p>(Partially inspired by glyph <img src="glyph.png" height="30" width="30"/>)</p>
 </section>
