--- a/bored.html
+++ b/bored.html
@@ -154,13 +154,13 @@ $ docker run --env SECRET_KEY=$(cat ../boredbot-secret-key) \
 </section>
 
 <section>
-<h2>Conclusions</h2>
+<h2>Parting thoughts</h2>
 
 <ul>
 <li class="fragment">No secrets on *Hub</li>
 <li class="fragment">PEX&amp;Docker for isolation</li>
-<li class="fragment">Files vs. env</li>
-<li class="fragment">Less #YOLO (k8s/mesos/swarm...)</li>
+<li class="fragment">DAISNAID: Files vs. env</li>
+<li class="fragment">DAISNAID: Less #YOLO (k8s/mesos/swarm...)</li>
 </ul>
 </section>
 			</div>
